dist/1.0/bin/sample/retrieveUnpackaged/objects/Acceptance_Protocol_Attribute__c.object
<CustomObject>
    <description>List of attributes shown on Acceptance Protocol.</description>
    <fields>
        <fullName>Acceptance_Protocol__c</fullName>
        <description>Relation to Acceptance Protocol</description>
        <inlineHelpText>Relation to Acceptance Protocol</inlineHelpText>
        <label>Acceptance Protocol</label>
        <referenceTo>Acceptance_Protocol__c</referenceTo>
        <relationshipLabel>Acceptance Protocol Attributes</relationshipLabel>
        <relationshipName>Acceptance_Protocol_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attribute_Value__c</fullName>
        <description>Value copied from Attribute&apos;s instance (Order Attribute)</description>
        <inlineHelpText>Value copied from Attribute&apos;s instance (Order Attribute)</inlineHelpText>
        <label>Attribute Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <description>Relation to Attribute</description>
        <inlineHelpText>Relation to Attribute</inlineHelpText>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Acceptance Protocol Attributes</relationshipLabel>
        <relationshipName>Acceptance_Protocol_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Attribute__c</fullName>
        <description>Relation to Attribute&apos;s instance on Order Line (Order Attribute)</description>
        <inlineHelpText>Relation to Attribute&apos;s instance on Order Line (Order Attribute)</inlineHelpText>
        <label>Order Attribute</label>
        <referenceTo>OrderAttribute__c</referenceTo>
        <relationshipLabel>Acceptance Protocol Attributes</relationshipLabel>
        <relationshipName>Acceptance_Protocol_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <description>Relation to Order Line</description>
        <inlineHelpText>Relation to Order Line</inlineHelpText>
        <label>Order Line</label>
        <referenceTo>OrderLine__c</referenceTo>
        <relationshipLabel>Acceptance Protocol Attributes</relationshipLabel>
        <relationshipName>Acceptance_Protocol_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Acceptance Protocol Attribute</label>
    <nameField>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acceptance Protocol Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>